# Torus

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: main-ci.yml  mas-release.yml  windows-release.yml
.storybook/: main.ts  preview.ts
scripts/: generate-xcodeproj.sh  macos-appstore-release.sh
src/: game.ts  main.ts  replay-proof.ts  scoreboard.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.appstore.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scoreboard.rs
src/skills/: runner.ts  store.ts  types.ts
src/ui/: badge-icons.ts  button-loading.ts  layout.ts  panels-and-modals.stories.ts  renderer.ts  score-submission.stories.ts  scoreboard.stories.ts  storybook-support.ts  theme.ts
supabase/: schema.sql
supabase/functions/verify-daily-score/: index.ts  simulator.ts
supabase/functions/verify-score/: index.ts  simulator.ts
xcode/: project.yml
